@@ -73,6 +73,9 @@ struct archive_plugin {
 	/**
 	 * Opens an input_stream of a file within the archive.
 	 *
+	 * If this function succeeds, then the #input_stream "owns"
+	 * the archive file and will automatically close it.
+	 *
 	 * @param path the path within the archive
 	 */
 	bool (*open_stream)(struct archive_file *, struct input_stream *is,
