@@ -1,4 +1,6 @@
 ver 0.15.7 (2009/??/??)
+* archive:
+  - close archive when stream is closed
 * input:
   - file: don't fall back to parent directory
   - archive: fixed memory leak in error handler
